services/flagger-canary-example/podinfo-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: podinfo
  namespace: test
  labels:
    app: podinfo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: naavre-dev.minikube.test
      http:
        paths:
          - path: /podinfo(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: podinfo
                port:
                  number: 9898
